fix scroll overflow-y

--- a/src/app/components/wrapperAnimated/wrapperAnimated.module.css
+++ b/src/app/components/wrapperAnimated/wrapperAnimated.module.css
@@ -3,6 +3,8 @@
   top: 4rem;
   left: 0;
   width: 100%;
+  height: calc(100vh - 4rem);
+  overflow-y: scroll;
 }
 
 @media screen and (min-width: 820px) {
