--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,7 +7,6 @@
 
 .header {
   width: 100%;
-  height: 40%;
   padding: 2rem;
   display: flex;
   justify-content: center;
@@ -26,7 +25,6 @@
   object-fit: cover;
 }
 .body {
-  height: 60%;
 }
 .textIntro {
   font-size: 1.6rem;
